--- a/GWEB/zapocet/Chile-master/Mates-_whatever-main/zm/nove.html
+++ b/GWEB/zapocet/Chile-master/Mates-_whatever-main/zm/nove.html
@@ -70,11 +70,11 @@
             </div>
             <div class="form-group">
                 <label for="latitude">Šířka</label>
-                <input type="number" class="form-control" id="latitude" required>
+                <input type="number" id="latitude" step="any" placeholder="Latitude">
             </div>
             <div class="form-group">
                 <label for="longitude">Délka</label>
-                <input type="number" class="form-control" id="longitude" required>
+                <input type="number" id="longitude" step="any" placeholder="Longitude">
             </div>
             <div class="form-group">
                 <label for="description">Popis</label>
